--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "tailwindcss": "^3.3.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "@types/uuid": "^9.0.7",    
+    "uuid": "^9.0.1",
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "appwrite": "^13.0.1",
+    "flowbite": "^2.2.1",
+    "flowbite-svelte": "^0.44.22",
+    "tailwind-merge": "^2.2.0"
+  }
 }
