FIX: double-quoted property name
Expected double-quoted property name in JSON at position 702 while parsing

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
     "@types/uuid": "^9.0.7",    
-    "uuid": "^9.0.1",
+    "uuid": "^9.0.1"
   },
   "type": "module",
   "dependencies": {
